 <?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.fixprotocol.orchestra</groupId>
	<artifactId>parent</artifactId>
	<version>1.6.2-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>${project.groupId}:${project.artifactId}</name>
	<description>Parent project for FIX Orchestra. Build Java 8 by default, multi-release jar on demand.</description>
	<url>https://github.com/FIXTradingCommunity/fix-orchestra/wiki</url>
	<inceptionYear>2016</inceptionYear>
	<prerequisites>
		<!-- supports toolchain configuration -->
		<maven>3.3.1</maven>
	</prerequisites>
	<organization>
		<name>FIX Trading Community</name>
		<url>http://https://www.fixtrading.org/</url>
	</organization>
	<licenses>
		<license>
			<name>The Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>
	<developers>
		<developer>
			<name>Don Mendelson</name>
			<email>donmendelson@silver-flash.net</email>
			<organization>FIX Trading Community</organization>
			<organizationUrl>https://www.fixtrading.org/</organizationUrl>
		</developer>
	</developers>
	<scm>
		<developerConnection>scm:git:ssh://git@github.com/FIXTradingCommunity/fix-orchestra.git</developerConnection>
		<url>https://github.com/FIXTradingCommunity/fix-orchestra</url>
	</scm>
	<issueManagement>
		<system>GitHub</system>
		<url>http://github.com/FIXTradingCommunity/fix-orchestra/issues</url>
	</issueManagement>
	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>
	<modules>
		<module>interfaces</module>
		<module>session-quickfix</module>
		<module>repository2010</module>
		<module>repository</module>
		<module>dsl-antlr</module>
		<module>message-model</module>
		<module>repository-quickfix</module>
		<module>model-quickfix</module>
		<module>docgen</module>
		<module>testgen</module>
		<module>state-machine</module>
		<module>repository-util</module>
	</modules>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<antlr.version>4.8-1</antlr.version>
		<base.java.version>1.8</base.java.version>
		<commons-cli.version>1.4</commons-cli.version>
		<cucumber.version>1.2.6</cucumber.version>
		<junit.version>5.6.1</junit.version>
		<log4j.version>2.13.2</log4j.version>
		<quickfixj.version>2.1.1</quickfixj.version>
		<saxon.version>10.1</saxon.version>
		<slf4j.version>1.7.22</slf4j.version>
		<stringtemplate.version>4.3</stringtemplate.version>
	</properties>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-engine</artifactId>
				<version>${junit.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-params</artifactId>
				<version>${junit.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<!-- Use toolchains to select the compilers -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-toolchains-plugin</artifactId>
					<version>3.0.0</version>
					<executions>
						<execution>
							<goals>
								<goal>toolchain</goal>
							</goals>
						</execution>
					</executions>
					<configuration>
						<toolchains>
							<jdk>
								<version>${base.java.version}</version>
							</jdk>
						</toolchains>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.1</version>
					<configuration>
						<source>${base.java.version}</source>
						<target>${base.java.version}</target>
					</configuration>
					<executions>
						<!-- for Java 11+ -->
						<execution>
							<id>java11</id>
							<goals>
								<goal>compile</goal>
							</goals>
							<configuration>
								<release>11</release>
								<jdkToolchain>
									<version>[11,)</version>
								</jdkToolchain>
								<compileSourceRoots>
									<compileSourceRoot>${project.basedir}/src/main/java11</compileSourceRoot>
								</compileSourceRoots>
								<multiReleaseOutput>true</multiReleaseOutput>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.2.0</version>
					<configuration>
						<archive>
							<manifest>
								<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
								<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
							</manifest>
							<manifestEntries>
								<Multi-Release>true</Multi-Release>
							</manifestEntries>
						</archive>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>3.1.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.0.0-M4</version>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<version>2.7</version>
			</plugin>
			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.6.8</version>
				<extensions>true</extensions>
				<configuration>
					<serverId>ossrh</serverId>
					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
					<autoReleaseAfterClose>true</autoReleaseAfterClose>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<profiles>
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>3.0.1</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.6</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>3.0.1</version>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
